--- a/src/index.css
+++ b/src/index.css
@@ -132,7 +132,7 @@ body{
     height: 100vh;
     width: 270px;
     box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
-    z-index: 9;
+    z-index: 5;
     background-color: #fff;
     /* padding: 1.5rem; */
     padding-top: 0;
@@ -149,7 +149,7 @@ body{
     /* display: hidden; */
     /* opacity: 0; */
     box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
-    z-index: 9;
+    z-index: 5;
     background-color: #fff;
     padding-top: 0;
     transition: all 0.3s ease-out;
@@ -163,14 +163,121 @@ body{
     -webkit-overflow-scrolling: touch;
   }
 
+  .sidebar-fixed:before
+  {
+    display: none;
+    opacity: 0;  
+  }
+
+  /* .mobile-burger-hidden {
+    z-index: 9;
+    display: none;
+    opacity: 0;
+    position: fixed;
+    left: -55px;
+    top: -100px;
+    width: 45px;
+    height: 45px;
+    transition: all 0.1s ease-out;
+  }
+*/
+  .mobile-burger-show {
+    position: fixed;
+    left: -55px;
+    top: -100px;
+    transition: all 0.4s ease-out;
+  } 
+
+  .mobile-logout {
+    display: hidden;
+    opacity: 0;
+  }
+
   @media (max-width: 450px) {
-    .sidebar-fixed {
-      width: 0;
-      display: none;
-      margin-left: 0 !important;
-      opacity: 0;
+    .mobile-logout {
+      display: block;
+      opacity: 1;
     }
 
+    .sidebar-fixed:before {
+      content: "";
+      position: absolute;
+      display: block;
+      opacity: 1; 
+      width: 100vh;
+      height: 100vh;
+      left: 270px;
+      top: 0;
+      bottom: 0;
+      right: 0;
+      transition: all 0.7s ease-out;
+      background-color: rgba(0, 0, 0, 0.32);
+      /* background-color: red; */
+      z-index: -1;
+    }
+
+    .navbar-toggler-icon {
+      display: block;
+      opacity: 1;
+      z-index: 9;
+    }
+    .mobile-burger-hidden {
+      /* z-index: 9; */
+      position: fixed;
+      left: -55px;
+      top: -4px;
+      width: 45px;
+      height: 45px;
+      transition: all 0.1s ease-out;
+    }
+
+    .mobile-burger-show {
+      opacity: 1;
+      position: fixed;
+      display: block;
+      width: 45px;
+      height: 45px;
+      top: -4px;
+      left: 270px;
+      background-color: #fff;
+      text-align: center;
+      line-height: 45px;
+      font-size: 38px;
+      transition: all 0.4s ease-out;
+      border-left: 0.5px solid #eee;
+    }
+    .mobile-burger-show .fa, 
+    .mobile-burger-hidden .fa {
+      color: #dc3545;
+      -webkit-text-stroke: 2px white;
+    }
+
+    .sidebar-fixed {
+      position: fixed;
+      display: block;
+      left: 0;
+      top: 0;
+      height: 100vh;
+      width: 270px;
+      box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
+      background-color: #fff;
+      padding-top: 0;
+      transition: all 0.3s ease-in-out;
+    }
+
+    .sidebar-fixed-inactive {
+      position: fixed;
+      left: -270px;
+      top: 0;
+      height: 100vh;
+      width: 270px;
+      box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
+      /* z-index: 99; */
+      background-color: #fff;
+      padding-top: 0;
+      transition: all 0.3s ease-in-out;
+    }
+    
     .navbar {
       margin-left: 0 !important;
     }
@@ -320,7 +427,7 @@ body{
   
   @media (max-width: 768px) {
     .sidebar-fixed {
-      display: none;
+      /* display: none; */
     }
     .navbar, .main {
       margin-left: 0 !important;
