--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,7 @@
+* {
+  font-family: -apple-system, BlinkMacSystemFont, Roboto, 'Segoe UI', Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-weight: 300;
+}
 body{
     margin: 0;
     font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
@@ -92,6 +96,10 @@ body{
     background-color: #EDEDEE;
   }
 
+  input[type=date].is-invalid {
+    border-bottom: 0.5px solid #dc3545 !important;
+  }
+
   div::-webkit-scrollbar {
     width: 10px;
   }
@@ -181,6 +189,12 @@ body{
     transition: all 0.1s ease-out;
   }
 */
+
+  .mobile-burger-hidden {
+    position: fixed;
+    left: -55px;
+    top: -100px;
+  }
   .mobile-burger-show {
     position: fixed;
     left: -55px;
@@ -194,6 +208,22 @@ body{
   }
 
   @media (max-width: 450px) {
+    .main {
+      min-height: 100% !important;
+    }
+
+    .form-inline {
+      display: block;
+    }
+
+    .form-check {
+      padding-left: 0;
+    }
+
+    .form-check .form-control {
+      height: 15px;
+    }
+
     .mobile-logout {
       display: block;
       opacity: 1;
